--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
     <div id="app" class="mw6 center">
         <form @submit="formSubmit" class="pa2 black-80">
             <div class="measure">
-                <h1 class="f-subheadline-ns f1 lh-solid mb4 near-black"><span class="orange">chat</span>NHS</h1>
+                <h1 class="f-subheadline-ns f1 lh-solid mb4 near-black"><span class="orange">micro</span>Llama</h1>
                 <label for="question" class="f4 db mb3">Your question:</label>
                 <input id="question" class="input-reset f4 ba b--black-20 pa2 mb1 db w-100 br2" type="text"
                     v-model.lazy="question">
