--- a/microllama/index.html
+++ b/microllama/index.html
@@ -20,8 +20,8 @@
                     v-model.lazy="question">
                 <input id="submit" class="dim mt3 pointer ph3 pv2 input-reset ba b--black br2 bg-transparent f4 mb2"
                     type="submit" :value="button_text">
-                <p class="mt1 georgia f4 lh-copy">{{ answer }}</p>
-                <p v-if="sources" class="mt2 georgia i mid-gray f5">Sources:
+                <p v-if="answer" class="mt1 georgia f4 lh-copy">{{ answer }}</p>
+                <p v-if="sources.length" class="mt2 georgia i mid-gray f5">Sources:
                 <ul>
                     <li v-for="source in sources" class="georgia i mid-gray f5 lh-copy">
                         <a v-if="source[1]" :href="source[1]" class="mid-gray dim">{{ source[0] }}</a>
@@ -38,21 +38,31 @@
             el: '#app',
             data: {
                 question: '',
-                answer: '',
-                sources: false,
+                answer: false,
+                sources: [],
                 prompt: '',
                 button_text: 'Tell me',
                 display: false,
+                thread: [],
             },
             methods: {
                 formSubmit(e) {
                     e.preventDefault();
                     app.button_text = "Hold tight...";
-                    api_url = "/api/ask?q=" + app.question;
-                    axios.get(api_url)
+                    if (app.answer) {
+                        app.thread.push({ "role": "user", "content": app.answer })
+                    }
+                    body = {
+                        'question': app.question,
+                        'thread': app.thread,
+                        'sources': app.sources,
+                    };
+                    api_url = "/api/ask";
+                    axios.post(api_url, body)
                         .then(function (response) {
                             app.answer = response.data['response']['answer'];
                             app.sources = response.data['response']['sources'];
+                            app.thread = response.data['response']['thread'];
                             app.button_text = "Tell me";
                         })
                         .catch(function (error) {
